.playwright-cli/console-2026-06-16T05-15-10-282Z.log
[     224ms] [LOG] [webpack] connecting... @ http://localhost:8000/vendors-node_modules_umijs_bundler-webpack_client_client_client_js.async.js:515
[     241ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ http://localhost:8000/mf-dep____vendor.054de1cb.js:931454
[     278ms] [LOG] [webpack] connected. @ http://localhost:8000/vendors-node_modules_umijs_bundler-webpack_client_client_client_js.async.js:548
[  347782ms] [ERROR] SyntaxError: /Users/cyq/work/code/caseHubWeb/src/pages/CaseHub/CaseLibrary/CaseDataTable.tsx: Expected corresponding JSX closing tag for <ProCard>. (627:8)
  625 |           rowSelection={rowSelection}
  626 |         />
> 627 |         </div>
      |         ^
  628 |       </ProCard>
  629 |
  630 |       {selectedRowKeys.length > 0 && ( @ http://localhost:8000/mf-dep____vendor.054de1cb.js:931571
[  379480ms] [LOG] [webpack] connecting... @ http://localhost:8000/vendors-node_modules_umijs_bundler-webpack_client_client_client_js.async.js:515
[  379897ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ http://localhost:8000/mf-dep____vendor.054de1cb.js:931454
[  379942ms] [LOG] [webpack] connected. @ http://localhost:8000/vendors-node_modules_umijs_bundler-webpack_client_client_client_js.async.js:548
